new proj/src/objects/GE_HQ_GIB_Mod_Req__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Primary_Fuel__c</fullName>
        <label>Primary Fuel</label>
        <picklist>
            <picklistValues>
                <fullName>#2 DIESEL FUEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGRICULTURAL WASTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALABAMA COAL (&lt;1% SULFUR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALKYLATED PHENYLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTHRACITE CULM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT PRODUCTS-RECYCLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOMASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOMASS (COW MANURE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BITUMINOUS GOBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLACK LIQUOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLAST-FURNACE GAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUTANE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARBON MONOXIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL,WOOD CHIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL/TIRES/DIAPERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL/WOOD/RDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL &amp; OIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-ALABAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-ANTHRACITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL BED METHANE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-BITUMINOUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL COKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-EASTERN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-EASTERN KENTUCKY BIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-HANNAH BASIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-ILLINOIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-IOWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAL-KENTUCKY</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_RPM__c</fullName>
        <label>RPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Rating_Unit__c</fullName>
        <label>Rating Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CROSS COMPOUND (SECONDARY SHAFT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horse Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilowatts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMSCFD H2+CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MegaVoltAmps(MVA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megawatts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Rating__c</fullName>
        <label>Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Record_Type__c</fullName>
        <label>Record Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Repairs__c</fullName>
        <label>Repairs</label>
        <picklist>
            <picklistValues>
                <fullName>High Penetration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Penetration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Penetration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Responsible_Account_Contact__c</fullName>
        <label>Responsible Account Contact</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_SN__c</fullName>
        <formula>HYPERLINK(Id, GE_ES_GE_S_N__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE SN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Services Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Services Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Structured Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Wind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Secondary_Fuel__c</fullName>
        <label>Secondary Fuel</label>
        <picklist>
            <picklistValues>
                <fullName>Crude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distillate Oil - Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerosene/J4/Jet Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Natural Gas (LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Naptha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Fuels (Trash/Wood/Biomass etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthetic  / Coal Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerGen Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerGen HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerGen Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Automobile/Tires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare/Pharmecuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Prisons/Materials etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulated Electric Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REA/Coop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locomotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethylene and Derivates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil/Gas Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil/Gas Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas To Liquid (GTL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Regulated - 100% Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil/Gas Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Regulated - PPA Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp &amp; Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syngas and Fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinjection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Segmentation__c</fullName>
        <label>Segmentation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Seibel_Row_ID_of_Asset__c</fullName>
        <label>Seibel Row ID of Asset (Unique Indentifi</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Service_Manager__c</fullName>
        <label>Service Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Service_Region__c</fullName>
        <label>Service Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Service_Relationship__c</fullName>
        <label>Service Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>CSA High Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA High Value w/ O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA Low Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA Low Value w/ O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA Medium Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA Medium Value w/ O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA O&amp;M only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-Transactional AE Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-Transactional-IFS Affiliates Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-Transactional-IFS Field Service Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-Transactional-Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OG Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind-Contractual Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind-O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind-Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor (Industrial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mech Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Hydro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Large Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Medium Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Mech Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE HD Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Generator Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Generator Hydro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>High Penetration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Penetration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Penetration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Shipped__c</fullName>
        <label>Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Site_CMF_Customer_Name__c</fullName>
        <label>Site CMF Customer Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Site_Conditions__c</fullName>
        <label>Site Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Marine Vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dusty coastal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dusty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arctic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>moderate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Site_Corrosivisity__c</fullName>
        <label>Site Corrosivisity</label>
        <picklist>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C5I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Site_DUNS__c</fullName>
        <formula>Account__r.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Spin_Tubes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spin Tubes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Start_Up_Date__c</fullName>
        <label>Start-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Starting_System__c</fullName>
        <label>Starting System</label>
        <picklist>
            <picklistValues>
                <fullName>Gas Expander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diesel/Gas Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCI (Generator)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam Turbine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Station_City__c</fullName>
        <label>Station City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Station_Country__c</fullName>
        <label>Station Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Station_Name__c</fullName>
        <label>Station Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Station_Region__c</fullName>
        <label>Station Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Propose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InService</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Built (Cancelled)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Targeted__c</fullName>
        <label>Targeted</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Wet Wash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor (Industrial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mech Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Hydro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Large Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Medium Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Mech Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE HD Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Generator Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Generator Hydro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-GE Generator Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyclone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dampers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dryer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Exchanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hopper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hopper/Silo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiclone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railroad Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrubber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selective Catalytic Reduction (SCR)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Transducer_type__c</fullName>
        <label>Transducer type</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7200 XY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPETITOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7200 XY &amp; SEISMIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3300 XY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3300 XY &amp; SEISMIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3300 XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3300 XL &amp; SEISMIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEISMIC ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHAFT RIDERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBSOLETE BENTLY SYSTEM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tube_Sheet_Jig__c</fullName>
        <label>Tube Sheet Jig #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Unit_Customer_Tag__c</fullName>
        <label>Unit Customer Tag</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Units_Compartment__c</fullName>
        <label># Filters/Compartment</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Upstream_Vane_Separator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upstream Vane Separator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Velocity__c</fullName>
        <label>Velocity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Vibration_Protection__c</fullName>
        <label>Vibration Protection</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPETITOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Volts__c</fullName>
        <label>Volts</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Warranty_End_Date__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Warranty_Text__c</fullName>
        <label>Warranty Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Warranty_Type__c</fullName>
        <label>Warranty Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended ES 104 Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>